--- a/AngularApp/src/app/pages/user/user-about-doctor/user-about-doctor.component.html
+++ b/AngularApp/src/app/pages/user/user-about-doctor/user-about-doctor.component.html
@@ -1,24 +1,18 @@
 <div class="container">
-    <div class="mt-4 row d-flex flex-row justify-content-around">
+    <div class="my-4 row d-flex flex-row justify-content-around">
         <img class="thumbnail rounded shadow mx-4 col-8" src="./../../../assets/img/no-image-avabliable.jpg" alt="Slika">
-        <div class="mx-4 mt-2 col">
-            <h2>{{res.ime}} {{res.prezime}}</h2>
-            <p class="fs-5">{{res.opis}}</p>
-            <p class="mt-4">Specijalizacija: {{res.specijalizacija}}</p>
-            <p>Grad: {{res.grad}}</p>
-            <p>Adresa: {{res.adresa}}</p>
-            <p>Kontakt telefon: {{res.kontaktBroj}}</p>
-            <p>E-mail: {{res.mailAdresa}}</p>
-            <a class="btn btn-primary" [routerLink]="'/kontakt/' + res.ustanovaId">Zakaži termin</a>
+        <div class="mx-4 col">
+            <div class="name d-flex align-items-center">
+                <h2>{{res.ime}} {{res.prezime}}</h2>
+                <h5 class="ms-2 mt-1">({{res.specijalizacija}})</h5>
+            </div>
+            <div class="mt-1">{{res.opis}}</div>
+            <div class="data mt-3">{{res.grad}}</div>
+            <div class="data">{{res.adresa}}</div>
+            <a href="mailto:{{res.mailAdresa}}" class="data text-decoration-none mt-2">{{res.mailAdresa}}</a>
+            <a href="tel:{{res.kontaktBroj}}" class="data text-decoration-none">{{res.kontaktBroj}}</a>
+            <a class="btn btn-primary mt-3" [routerLink]="'/kontakt/' + res.ljekarId">Zakaži termin</a>
         </div>
+        <app-view-map [medicalInstitutionId]="res.ustanovaId"></app-view-map>
     </div>
-    <iframe
-        class="container location my-5"
-        height="300px"
-        loading="lazy"
-        allowfullscreen
-        referrerpolicy="no-referrer-when-downgrade"
-        src="https://www.google.com/maps/embed/v1/place?key=API_KEY
-        &q=Space+Needle,Seattle+WA">
-    </iframe>
 </div>
