--- a/AngularApp/src/app/pages/user/user-about-medical-institucion/user-about-medical-institucion.component.html
+++ b/AngularApp/src/app/pages/user/user-about-medical-institucion/user-about-medical-institucion.component.html
@@ -1,15 +1,15 @@
 <div class="container">
-    <div class="mt-4 row d-flex flex-row justify-content-around">
+    <div class="my-4 row d-flex flex-row justify-content-around">
         <img class="thumbnail rounded shadow mx-4 col-8" src="./../../../assets/img/no-image-avabliable.jpg" alt="Slika">
-        <div class="mx-4 mt-2 col">
-            <h2>{{res.naziv}}</h2>
-            <p class="fs-5">{{res.opis}}</p>
-            <p class="mt-4">Grad: {{res.grad}}</p>
-            <p>Adresa: {{res.adresa}}</p>
-            <p>Kontakt telefon: {{res.kontaktBroj}}</p>
-            <p>E-mail: {{res.email}}</p>
-            <a class="btn btn-primary" [routerLink]="res.tipUstanove == 'apoteka' ? '/pretrazi/lijekovi/' + res.ustanovaId : '/pretrazi/ljekari/' + res.ustanovaId">{{ res.tipUstanove == "apoteka" ? "Pogledaj lijekove" : "Pogledaj ljekare"}}</a>
+        <div class="mx-4 col">
+            <h2 class="name">{{res.naziv}}</h2>
+            <div class="mt-2">{{res.opis}}</div>
+            <div class="data mt-3">{{res.grad}}</div>
+            <div class="data">{{res.adresa}}</div>
+            <a href="mailto:{{res.email}}" class="data text-decoration-none mt-2">{{res.email}}</a>
+            <a href="tel:{{res.kontaktBroj}}" class="data text-decoration-none">{{res.kontaktBroj}}</a>
+            <a class="btn btn-primary mt-3" [routerLink]="res.tipUstanove == 'apoteka' ? '/pretrazi/lijekovi/' + res.ustanovaId : '/pretrazi/ljekari/' + res.ustanovaId">{{ res.tipUstanove == "apoteka" ? "Pogledaj lijekove" : "Pogledaj ljekare"}}</a>
         </div>
     </div>
-    <app-map></app-map>
+    <app-view-map [medicalInstitutionId]="res.ustanovaId"></app-view-map>
 </div>
