--- a/AngularApp/src/app/components/set-map/set-map.component.html
+++ b/AngularApp/src/app/components/set-map/set-map.component.html
@@ -1,2 +1,7 @@
 <div id="map"></div>
-<button id="btn" class="btn btn-primary" (click)="saveLocation()">Sačuvaj lokaciju</button>
+<button id="btn" class="btn btn-primary" (click)="showModal = true">Sačuvaj lokaciju</button>
+<app-modal
+    *ngIf="showModal"
+    (closeModal)="showModal = false"
+    (onSubmit)="saveLocation()"
+></app-modal>
