--- a/AngularApp/src/app/pages/pharmacy/pharmacy-edit-medicine/pharmacy-edit-medicine.component.html
+++ b/AngularApp/src/app/pages/pharmacy/pharmacy-edit-medicine/pharmacy-edit-medicine.component.html
@@ -3,18 +3,20 @@
         <img class="thumbnail rounded shadow mx-4 col-8" src="./../../../assets/img/no-image-avabliable.jpg" alt="Slika">
         <div class="mx-4 mt-2 col">
             <form #loginForm="ngForm" (submit)="formSubmit(loginForm.value)">
-                <input type="file" class="form-control mt-2" name="slijaLijeka" ngModel>
-                <input class="form-control mt-2" placeholder="Naziv lijeka" name="nazivLijeka" [(ngModel)]="res.nazivLijeka" autocomplete="off">
-                <textarea class="form-control mt-2" rows="3" placeholder="Opis lijeka" name="opisLijeka" [(ngModel)]="res.opisLijeka"></textarea>
-                <div class="inline-input-group mt-2">
-                    <label for="cijenaLijeka">Cijena Lijeka (KM): </label>
-                    <input type="number" id="cijenaLijeka" class="form-control inline-input" name="cijenaLijeka" [(ngModel)]="res.cijenaLijeka">
-                    <label for="kolicina">Količina: </label>
-                    <input type="number" id="kolicina" class="form-control inline-input" name="kolicina" [(ngModel)]="res.kolicina">
-                </div>
-                <div class="form-check mt-2">
-                    <input class="form-check-input" type="checkbox" id="checkbox" name="zahtijevaRecept" [(ngModel)]="res.zahtijevaRecept">
-                    <label for="checkbox">Zahtijeva recept?</label>
+                <div class="mx-1">
+                    <input type="file" class="form-control mt-2" name="slijaLijeka" ngModel>
+                    <input class="form-control mt-2" placeholder="Naziv lijeka" name="nazivLijeka" [(ngModel)]="res.nazivLijeka" autocomplete="off">
+                    <textarea class="form-control mt-2" rows="3" placeholder="Opis lijeka" name="opisLijeka" [(ngModel)]="res.opisLijeka"></textarea>
+                    <div class="inline-input-group mt-2">
+                        <label for="cijenaLijeka">Cijena Lijeka (KM): </label>
+                        <input type="number" id="cijenaLijeka" class="form-control inline-input" name="cijenaLijeka" [(ngModel)]="res.cijenaLijeka">
+                        <label for="kolicina">Količina: </label>
+                        <input type="number" id="kolicina" class="form-control inline-input" name="kolicina" [(ngModel)]="res.kolicina">
+                    </div>
+                    <div class="form-check mt-2">
+                        <input class="form-check-input" type="checkbox" id="checkbox" name="zahtijevaRecept" [(ngModel)]="res.zahtijevaRecept">
+                        <label for="checkbox">Zahtijeva recept?</label>
+                    </div>
                 </div>
                 <button class="btn btn-primary btn-half-block mt-2">Potvrdi</button>
                 <button type="button" (click)="showModal = true" class="btn btn-danger btn-half-block mt-2">Izbriši Lijek</button>
