--- a/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
+++ b/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
@@ -19,37 +19,37 @@
           <h5>Detalji narudžbe</h5>
           <hr>
           <div class="form-group mb-2">
-            <label>Ime i prezime:</label>
-            <input type="text" class="form-control shadow-sm" name="imePrezime" [(ngModel)]="korisnik.imePrezime" autocomplete="off" required>
+            <label class="mx-1">Ime i prezime:</label>
+            <input type="text" class="form-control shadow-sm" name="imePrezime" [(ngModel)]="korisnik.imePrezime" autocomplete="off" spellcheck="false" required>
           </div>
-          <div class="form-group mb-2">
-            <label>Telefonski broj:</label>
-            <input type="text" class="form-control shadow-sm" name="telefonskiBroj" [(ngModel)]="korisnik.telefonskiBroj" autocomplete="off" required>
-          </div>
-          <label>Grad:</label>
-          <select class="form-select mb-2" name="grad" autocomplete="off" required>
+          <label class="mx-1">Grad:</label>
+          <select class="form-select mb-2" name="grad" autocomplete="off" spellcheck="false" required>
             <option *ngFor="let i of gradovi" [(ngModel)]="i.gradId">{{ i.naziv }}</option>
           </select>
           <div class="form-group mb-2">
-            <label>Adresa stanovanja:</label>
-            <input type="text" class="form-control shadow-sm" name="adresa" [(ngModel)]="korisnik.adresa" autocomplete="off" required ngModel>
+            <label class="mx-1">Adresa stanovanja:</label>
+            <input type="text" class="form-control shadow-sm" name="adresa" [(ngModel)]="korisnik.adresa" autocomplete="off" spellcheck="false" required ngModel>
           </div>
           <div class="form-group mb-2">
-            <label>Email adresa:</label>
-            <input type="text" class="form-control shadow-sm" name="mailAdresa" [(ngModel)]="korisnik.mailAdresa" autocomplete="off" required ngModel>
+            <label class="mx-1">Email adresa:</label>
+            <input type="text" class="form-control shadow-sm" name="mailAdresa" [(ngModel)]="korisnik.mailAdresa" autocomplete="off" spellcheck="false" required ngModel>
+          </div>
+          <div class="form-group mb-2">
+            <label class="mx-1">Telefonski broj:</label>
+            <input type="text" class="form-control shadow-sm" name="telefonskiBroj" [(ngModel)]="korisnik.telefonskiBroj" autocomplete="off" spellcheck="false" required>
           </div>
           <hr>
           <div class="card-column">
-            <p class="mb-2">Ukupna cijena lijekova:</p>
-            <p class="mb-2">{{ sumPrice() }}KM</p>
+            <p class="mb-2 mx-1">Ukupna cijena lijekova:</p>
+            <p class="mb-2 mx-1">{{ sumPrice() }}KM</p>
           </div>
           <div class="card-column">
-            <p class="mb-2">Cijena dostave:</p>
-            <p class="mb-2">{{ deliveryPrice() }}KM</p>
+            <p class="mb-2 mx-1">Cijena dostave:</p>
+            <p class="mb-2 mx-1">{{ deliveryPrice() }}KM</p>
           </div>
           <div class="card-column">
-            <p class="mb-2">Ukupno cijena lijekova i dostave:</p>
-            <p class="mb-2">{{ sumPrice() + deliveryPrice() }}KM</p>
+            <p class="mb-2 mx-1">Ukupno cijena lijekova i dostave:</p>
+            <p class="mb-2 mx-1">{{ sumPrice() + deliveryPrice() }}KM</p>
           </div>
           <button type="button" class="btn btn-primary btn-lg btn-block mt-2" (click)="showModal = true">Potvrdi narudžbu</button>
           <app-modal
