--- a/AngularApp/src/app/components/navbar/navbar.component.html
+++ b/AngularApp/src/app/components/navbar/navbar.component.html
@@ -13,7 +13,8 @@
       <li *ngIf="showLink('apoteka')" class="nav-item"><a class="btn navbar-link" routerLink="/apoteka/dodaj" routerLinkActive="active-link">Dodaj lijek</a></li>
       <li *ngIf="showLink('apoteka')" class="nav-item"><a class="btn navbar-link" routerLink="/apoteka/podaci" routerLinkActive="active-link">Podaci</a></li>
       <li *ngIf="showLink('apoteka')" class="nav-item"><a class="btn navbar-link" routerLink="/apoteka/lokacija" routerLinkActive="active-link">Lokacija</a></li>
-      <li *ngIf="showLink('ustanova-zdravstva')" class="nav-item"><a class="btn navbar-link" routerLink="/ustanova-zdravstva/lokacija" routerLinkActive="active-link">Lokacija</a></li>
+      <li *ngIf="showLink('bolnica')" class="nav-item"><a class="btn navbar-link" routerLink="/ustanova-zdravstva/podaci" routerLinkActive="active-link">Podaci</a></li>
+      <li *ngIf="showLink('bolnica')" class="nav-item"><a class="btn navbar-link" routerLink="/ustanova-zdravstva/lokacija" routerLinkActive="active-link">Lokacija</a></li>
       <li *ngIf="showLink('ljekar')" class="nav-item"><a class="btn navbar-link" routerLink="/ljekar/uputnice" routerLinkActive="active-link">Pregledaj uputnice</a></li>
       <li *ngIf="isLoggedIn()" class="nav-item"><button class="btn btn-primary navbar-link" (click)="logoutUser()">Odjavi se</button></li>
     </ul>
