--- a/AngularApp/src/app/pages/index-page/index-page.component.html
+++ b/AngularApp/src/app/pages/index-page/index-page.component.html
@@ -1,8 +1,8 @@
 <div class="login shadow">
-    <form #loginForm="ngForm" (submit)="formSubmit(loginForm.value)">
+    <form #loginForm="ngForm" (submit)="loginUser(loginForm.value)">
         <h3 class="text-center mt-2">Prijavi se</h3>
         <div class="form-group first-input">
-            <label>Korisničko ime:</label>
+            <label>Email adresa:</label>
             <input type="email" class="form-control" name="mailAdresa" autocomplete="off" ngModel>
         </div>
         <div class="form-group mt-2">
