--- a/AngularApp/src/app/pages/pharmacy/pharmacy-orders-details/pharmacy-orders-details.component.html
+++ b/AngularApp/src/app/pages/pharmacy/pharmacy-orders-details/pharmacy-orders-details.component.html
@@ -1,70 +1,69 @@
 <div class="container">
-    <div class="my-5 main">
-      <div class="items">
-        <h4>{{ narudzbe[0].imePrezime }}</h4>
-        <p>Trenutno imate {{ narudzbe.length }} lijekova za isporučiti</p>
-        <hr>
-        <div *ngFor="let i of narudzbe">
-          <app-item-list
-            [name]="i.nazivLijeka"
-            [description]="i.opisLijeka"
-            [price]="i.cijenaLijeka + 'KM'"
-            btnText="Ukloni lijek"
-            (btnClick)="showModalDeleteMedicineFunc(i.narudzbaId)"
-          >
-          </app-item-list>
-        </div>
+  <div class="my-5 main">
+    <div class="items">
+      <h4>{{ narudzbe[0].imePrezime }}</h4>
+      <p>Trenutno imate {{ narudzbe.length }} lijekova za isporučiti</p>
+      <hr>
+      <div *ngFor="let i of narudzbe">
+        <app-item-list
+          [name]="i.naziv"
+          [description]="i.opis"
+          [price]="i.cijena + 'KM'"
+          btnText="Ukloni lijek"
+          (btnClick)="showModalDeleteMedicineFunc(i.narudzbaId)"
+        >
+        </app-item-list>
       </div>
-      <div class="card-details card bg-primary mt-4 shadow-lg">
-        <div class="card-body">
-          <h5>Detalji narudžbe</h5>
-          <hr>
-          <div class="form-group mb-2">
-            <label>Ime i prezime:</label>
-            <input type="text" class="form-control shadow-sm" [value]="narudzbe[0].imePrezime" readonly>
-          </div>
-          <div class="form-group mb-2">
-            <label>Telefonski broj:</label>
-            <input type="text" class="form-control shadow-sm" [value]="narudzbe[0].telefonskiBroj" readonly>
-          </div>
-          <div class="form-group mb-2">
-            <label>Grad:</label>
-            <input type="text" class="form-control shadow-sm" [value]="narudzbe[0].grad" readonly>
-          </div>
-          <div class="form-group mb-2">
-            <label>Adresa stanovanja:</label>
-            <input type="text" class="form-control shadow-sm" [value]="narudzbe[0].adresa" readonly>
-          </div>
-          <div class="form-group mb-2">
-            <label>Email adresa:</label>
-            <input type="text" class="form-control shadow-sm" [value]="narudzbe[0].mailAdresa" readonly>
-          </div>
-          <hr>
-          <div class="card-column">
-            <p class="mb-2">Ukupna cijena lijekova:</p>
-            <p class="mb-2">{{ sumPrice() }}KM</p>
-          </div>
-          <div class="card-column">
-            <p class="mb-2">Cijena dostave:</p>
-            <p class="mb-2">{{ narudzbe[0].cijenaDostave || 0 }}KM</p>
-          </div>
-          <div class="card-column">
-            <p class="mb-2">Ukupno cijena lijekova i dostave:</p>
-            <p class="mb-2">{{ sumPrice() + narudzbe[0].cijenaDostave }}KM</p>
-          </div>
-          <button class="btn btn-primary btn-lg btn-block mt-2" (click)="showModalSubmitForm = true">{{ status == "aktivno" ? "Isporuči narudžbu" : "Izbriši narudžbu" }}</button>
-          <app-modal
-            *ngIf="showModalDeleteMedicine"
-            (closeModal)="showModalDeleteMedicine = false"
-            (onSubmit)="deleteMedicine()"
-          ></app-modal>
-          <app-modal
-            *ngIf="showModalSubmitForm"
-            (closeModal)="showModalSubmitForm = false"
-            (onSubmit)="confirmOrder()"
-          ></app-modal>
+    </div>
+    <div class="card-details card bg-primary mt-4 shadow-lg">
+      <div class="card-body">
+        <h5>Detalji narudžbe</h5>
+        <hr>
+        <div class="form-group mb-2">
+          <label>Ime i prezime:</label>
+          <input type="text" class="form-control shadow-sm" [value]="narudzbe[0].imePrezime" readonly>
         </div>
+        <div class="form-group mb-2">
+          <label>Broj Telefona:</label>
+          <input type="text" class="form-control shadow-sm" [value]="narudzbe[0].brojTelefona" readonly>
+        </div>
+        <div class="form-group mb-2">
+          <label>Grad:</label>
+          <input type="text" class="form-control shadow-sm" [value]="narudzbe[0].grad" readonly>
+        </div>
+        <div class="form-group mb-2">
+          <label>Adresa stanovanja:</label>
+          <input type="text" class="form-control shadow-sm" [value]="narudzbe[0].adresa" readonly>
+        </div>
+        <div class="form-group mb-2">
+          <label>Email adresa:</label>
+          <input type="text" class="form-control shadow-sm" [value]="narudzbe[0].mailAdresa" readonly>
+        </div>
+        <hr>
+        <div class="card-column">
+          <p class="mb-2">Ukupna cijena lijekova:</p>
+          <p class="mb-2">{{ sumPrice() }}KM</p>
+        </div>
+        <div class="card-column">
+          <p class="mb-2">Cijena dostave:</p>
+          <p class="mb-2">{{ narudzbe[0].cijenaDostave || 0 }}KM</p>
+        </div>
+        <div class="card-column">
+          <p class="mb-2">Ukupno cijena lijekova i dostave:</p>
+          <p class="mb-2">{{ sumPrice() + narudzbe[0].cijenaDostave }}KM</p>
+        </div>
+        <button class="btn btn-primary btn-lg btn-block mt-2" (click)="showModalSubmitForm = true">{{ status == "aktivno" ? "Isporuči narudžbu" : "Izbriši narudžbu" }}</button>
       </div>
     </div>
   </div>
-  
+</div>
+<app-modal
+  *ngIf="showModalDeleteMedicine"
+  (closeModal)="showModalDeleteMedicine = false"
+  (onSubmit)="deleteMedicine()"
+></app-modal>
+<app-modal
+  *ngIf="showModalSubmitForm"
+  (closeModal)="showModalSubmitForm = false"
+  (onSubmit)="confirmOrder()"
+></app-modal>
