--- a/AngularApp/src/app/components/navbar/navbar.component.html
+++ b/AngularApp/src/app/components/navbar/navbar.component.html
@@ -5,17 +5,15 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav ms-auto">
-      <li *ngIf="showLink('korisnik')" class="nav-item"><a class="btn navbar-link" routerLink="/pretrazi" routerLinkActive="active-link">Pretraži</a></li>
-      <li *ngIf="showLink('korisnik')" class="nav-item"><a class="btn navbar-link" routerLink="/korpa" routerLinkActive="active-link">Korpa</a></li>
-      <li *ngIf="showLink('korisnik')" class="nav-item"><a class="btn navbar-link" routerLink="/podaci" routerLinkActive="active-link">Moji podaci</a></li>
-      <li *ngIf="showLink('apoteka')" class="nav-item"><a class="btn navbar-link" routerLink="/apoteka/narudzbe" routerLinkActive="active-link">Narudžbe</a></li>
-      <li *ngIf="showLink('apoteka')" class="nav-item"><a class="btn navbar-link" routerLink="/apoteka/lijekovi" routerLinkActive="active-link">Lijekovi</a></li>
-      <li *ngIf="showLink('apoteka')" class="nav-item"><a class="btn navbar-link" routerLink="/apoteka/dodaj" routerLinkActive="active-link">Dodaj lijek</a></li>
-      <li *ngIf="showLink('apoteka')" class="nav-item"><a class="btn navbar-link" routerLink="/apoteka/podaci" routerLinkActive="active-link">Podaci</a></li>
-      <li *ngIf="showLink('apoteka')" class="nav-item"><a class="btn navbar-link" routerLink="/apoteka/lokacija" routerLinkActive="active-link">Lokacija</a></li>
-      <li *ngIf="showLink('bolnica')" class="nav-item"><a class="btn navbar-link" routerLink="/ustanova-zdravstva/podaci" routerLinkActive="active-link">Podaci</a></li>
-      <li *ngIf="showLink('bolnica')" class="nav-item"><a class="btn navbar-link" routerLink="/ustanova-zdravstva/lokacija" routerLinkActive="active-link">Lokacija</a></li>
-      <li *ngIf="showLink('ljekar')" class="nav-item"><a class="btn navbar-link" routerLink="/ljekar/uputnice" routerLinkActive="active-link">Pregledaj uputnice</a></li>
+      <li *ngIf="showLink(['korisnik', 'ljekar'])" class="nav-item"><a class="btn navbar-link" routerLink="/pretrazi" routerLinkActive="active-link">Pretraži</a></li>
+      <li *ngIf="showLink(['korisnik', 'ljekar'])" class="nav-item"><a class="btn navbar-link" routerLink="/korpa" routerLinkActive="active-link">Korpa</a></li>
+      <li *ngIf="showLink(['korisnik', 'ljekar'])" class="nav-item"><a class="btn navbar-link" routerLink="/podaci" routerLinkActive="active-link">Moji podaci</a></li>
+      <li *ngIf="showLink(['apoteka'])" class="nav-item"><a class="btn navbar-link" routerLink="/apoteka/narudzbe" routerLinkActive="active-link">Narudžbe</a></li>
+      <li *ngIf="showLink(['apoteka'])" class="nav-item"><a class="btn navbar-link" routerLink="/apoteka/lijekovi" routerLinkActive="active-link">Lijekovi</a></li>
+      <li *ngIf="showLink(['apoteka'])" class="nav-item"><a class="btn navbar-link" routerLink="/apoteka/dodaj" routerLinkActive="active-link">Dodaj lijek</a></li>
+      <li *ngIf="showLink(['bolnica', 'apoteka'])" class="nav-item"><a class="btn navbar-link" routerLink="/ustanova-zdravstva/podaci" routerLinkActive="active-link">Podaci</a></li>
+      <li *ngIf="showLink(['bolnica', 'apoteka'])" class="nav-item"><a class="btn navbar-link" routerLink="/ustanova-zdravstva/lokacija" routerLinkActive="active-link">Lokacija</a></li>
+      <li *ngIf="showLink(['ljekar'])" class="nav-item"><a class="btn navbar-link" routerLink="/ljekar/uputnice" routerLinkActive="active-link">Pregledaj uputnice</a></li>
       <li *ngIf="isLoggedIn()" class="nav-item"><button class="btn btn-primary navbar-link" (click)="logoutUser()">Odjavi se</button></li>
     </ul>
   </div>
