--- a/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
+++ b/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
@@ -32,7 +32,7 @@
           </div>
           <div class="form-group mb-2">
             <label class="mx-1">Email adresa:</label>
-            <input type="text" class="form-control shadow-sm" name="mailAdresa" [(ngModel)]="korisnik.mailAdresa" autocomplete="off" spellcheck="false" required ngModel>
+            <input type="email" class="form-control shadow-sm" name="mailAdresa" [(ngModel)]="korisnik.mailAdresa" autocomplete="off" spellcheck="false" required ngModel>
           </div>
           <div class="form-group mb-2">
             <label class="mx-1">Broj Telefona:</label>
