Added fronted logic for viewing pictures, also backend api endpoints for images

--- a/AngularApp/src/app/components/item-list/item-list.component.html
+++ b/AngularApp/src/app/components/item-list/item-list.component.html
@@ -2,7 +2,7 @@
     <div class="card-body pt-2">
         <div class="card-align">
             <div class="card-column align-items-center justify-content-start">
-                <img src="./../../../assets/img/no-image-avabliable.jpg" class="card-img" alt="Slika">
+                <img src="{{img}}" class="card-img" alt="Slika">
                 <div class="ms-4">
                     <h5>{{name}}</h5>
                     <p class="small mb-0">{{description}}</p>
