--- a/AngularApp/src/app/pages/user/user-about-doctor/user-about-doctor.component.html
+++ b/AngularApp/src/app/pages/user/user-about-doctor/user-about-doctor.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="my-4 row d-flex flex-row justify-content-around">
-        <img class="thumbnail rounded shadow mx-4 col-8" src="./../../../assets/img/no-image-avabliable.jpg" alt="Slika">
+        <img class="thumbnail rounded shadow mx-4 col-8" [src]="res.slika" alt="Slika">
         <div class="mx-4 col">
             <div class="name d-flex align-items-center">
                 <h2>{{res.ime}} {{res.prezime}}</h2>
