--- a/AngularApp/src/app/pages/user/user-search-doctors/user-search-doctors.component.html
+++ b/AngularApp/src/app/pages/user/user-search-doctors/user-search-doctors.component.html
@@ -5,7 +5,7 @@
 ></app-filter>
 <div class="container cards">
     <app-card *ngFor="let i of res"
-        img="./../../../assets/img/no-image-avabliable.jpg"
+        [img]="i.slika || 'assets/img/doctor-placeholder.jpg'"
         [title]="i.imePrezime"
         [description]="i.specijalizacija"
         btn_text1="Termini"
