--- a/AngularApp/src/app/components/edit-medical-institution/edit-medical-institution.component.html
+++ b/AngularApp/src/app/components/edit-medical-institution/edit-medical-institution.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="my-5 row d-flex flex-row justify-content-around">
-        <img class="thumbnail rounded shadow mx-4 col-8" src="./../../../assets/img/no-image-avabliable.jpg" alt="Slika">
+        <img class="thumbnail rounded shadow mx-4 col-8" [src]="res.slika" alt="Slika">
         <div class="content mx-4 col">
             <form #loginForm="ngForm">
                 <div class="mx-1">
