--- a/AngularApp/src/app/pages/pharmacy/pharmacy-add-medicine/pharmacy-add-medicine.component.html
+++ b/AngularApp/src/app/pages/pharmacy/pharmacy-add-medicine/pharmacy-add-medicine.component.html
@@ -1,25 +1,26 @@
 <div class="container">
     <div class="my-5 row d-flex flex-row justify-content-around">
-        <img class="thumbnail rounded shadow mx-4 col-8" src="./../../../assets/img/no-image-avabliable.jpg" alt="Slika">
-        <div class="mx-4 mt-2 col">
-            <form #loginForm="ngForm" (submit)="AddMedicine(loginForm.value)">
-                <div class="mx-1">
-                    <input type="file" class="form-control mt-2" name="slika" ngModel>
-                    <input class="form-control mt-2" placeholder="Naziv lijeka" name="naziv" ngModel autocomplete="off">
-                    <textarea class="form-control mt-2" rows="3" placeholder="Opis lijeka" name="opis" ngModel></textarea>
-                    <div class="inline-input-group mt-2">
-                        <label for="cijena">Cijena Lijeka (KM): </label>
-                        <input type="number" id="cijena" class="form-control inline-input" name="cijena" ngModel>
-                        <label for="kolicina">Količina: </label>
-                        <input type="number" id="kolicina" class="form-control inline-input" name="kolicina" ngModel>
-                    </div>
-                    <div class="form-check mt-2">
-                        <input class="form-check-input" type="checkbox" id="checkbox" name="zahtijevaRecept" ngModel>
-                        <label for="checkbox">Zahtijeva recept?</label>
-                    </div>
-                </div>
-                <button class="btn btn-primary btn-block mt-2">Potvrdi</button>
-            </form>
-        </div>
+      <img class="thumbnail rounded shadow mx-4 col-8" src="./../../../assets/img/no-image-avabliable.jpg" alt="Slika">
+      <div class="mx-4 mt-2 col">
+        <form #loginForm="ngForm" (ngSubmit)="AddMedicine(loginForm.value)">
+          <div class="mx-1">
+            <input type="file" class="form-control mt-2" name="slika" ngModel>
+            <input class="form-control mt-2" placeholder="Naziv lijeka" name="naziv" ngModel autocomplete="off">
+            <textarea class="form-control mt-2" rows="3" placeholder="Opis lijeka" name="opis" ngModel></textarea>
+            <div class="inline-input-group mt-2">
+              <label for="cijena">Cijena Lijeka (KM): </label>
+              <input type="number" id="cijena" class="form-control inline-input" name="cijena" ngModel>
+              <label for="kolicina">Količina: </label>
+              <input type="number" id="kolicina" class="form-control inline-input" name="kolicina" ngModel>
+            </div>
+            <div class="form-check mt-2">
+              <input class="form-check-input" type="checkbox" id="checkbox" name="zahtijevaRecept" ngModel>
+              <label for="checkbox">Zahtijeva recept?</label>
+            </div>
+          </div>
+          <button type="submit" class="btn btn-primary btn-block mt-2">Potvrdi</button>
+        </form>
+      </div>
     </div>
-</div>
+  </div>
+  
