--- a/AngularApp/src/app/pages/pharmacy/pharmacy-edit-medicine/pharmacy-edit-medicine.component.html
+++ b/AngularApp/src/app/pages/pharmacy/pharmacy-edit-medicine/pharmacy-edit-medicine.component.html
@@ -1,6 +1,6 @@
 <div class="container">
     <div class="my-5 row d-flex flex-row justify-content-around">
-        <img class="thumbnail rounded shadow mx-4 col-8" src="./../../../assets/img/no-image-avabliable.jpg" alt="Slika">
+        <img class="thumbnail rounded shadow mx-4 col-8" [src]="res.slika" alt="Slika">
         <div class="mx-4 mt-2 col">
             <form #loginForm="ngForm" (submit)="EditMedicine(loginForm.value)">
                 <div class="mx-1">
