--- a/AngularApp/src/app/pages/pharmacy/pharmacy-add-medicine/pharmacy-add-medicine.component.html
+++ b/AngularApp/src/app/pages/pharmacy/pharmacy-add-medicine/pharmacy-add-medicine.component.html
@@ -1,10 +1,11 @@
 <div class="container">
     <div class="my-5 row d-flex flex-row justify-content-around">
-      <img class="thumbnail rounded shadow mx-4 col-8" src="./../../../assets/img/no-image-avabliable.jpg" alt="Slika">
+      <img *ngIf="!image" class="thumbnail rounded shadow mx-4 col-8" src="./../../../assets/img/no-image-avabliable.jpg" alt="Slika">
+      <img *ngIf="image" class="thumbnail rounded shadow mx-4 col-8" [src]="image" alt="Slika">
       <div class="mx-4 mt-2 col">
         <form #loginForm="ngForm" (ngSubmit)="AddMedicine(loginForm.value)">
           <div class="mx-1">
-            <input type="file" class="form-control mt-2" name="slika" ngModel>
+            <input type="file" id="imageInput" class="form-control mt-2" (change)="onFileSelected($event)">
             <input class="form-control mt-2" placeholder="Naziv lijeka" name="naziv" ngModel autocomplete="off">
             <textarea class="form-control mt-2" rows="3" placeholder="Opis lijeka" name="opis" ngModel></textarea>
             <div class="inline-input-group mt-2">
