--- a/AngularApp/src/app/pages/pharmacy/pharmacy-orders-details/pharmacy-orders-details.component.html
+++ b/AngularApp/src/app/pages/pharmacy/pharmacy-orders-details/pharmacy-orders-details.component.html
@@ -6,6 +6,7 @@
       <hr>
       <div *ngFor="let i of narudzbe">
         <app-item-list
+          [img]="i.slika || './../../../assets/img/no-image-avabliable.jpg'"
           [name]="i.naziv"
           [description]="i.opis"
           [price]="i.cijena + 'KM'"
@@ -37,20 +38,20 @@
         </div>
         <div class="form-group mb-2">
           <label>Email adresa:</label>
-          <input type="text" class="form-control shadow-sm" [value]="narudzbe[0].mailAdresa" readonly>
+          <input type="email" class="form-control shadow-sm" [value]="narudzbe[0].mailAdresa" readonly>
         </div>
         <hr>
         <div class="card-column">
           <p class="mb-2">Ukupna cijena lijekova:</p>
-          <p class="mb-2">{{ sumPrice() }}KM</p>
+          <p class="mb-2">{{ sumPrice() }} KM</p>
         </div>
         <div class="card-column">
           <p class="mb-2">Cijena dostave:</p>
-          <p class="mb-2">{{ narudzbe[0].cijenaDostave || 0 }}KM</p>
+          <p class="mb-2">{{ narudzbe[0].cijenaDostave || 0 }} KM</p>
         </div>
         <div class="card-column">
           <p class="mb-2">Ukupno cijena lijekova i dostave:</p>
-          <p class="mb-2">{{ sumPrice() + narudzbe[0].cijenaDostave }}KM</p>
+          <p class="mb-2">{{ sumPrice() + narudzbe[0].cijenaDostave }} KM</p>
         </div>
         <button class="btn btn-primary btn-lg btn-block mt-2" (click)="showModalSubmitForm = true">{{ status == "aktivno" ? "Isporuči narudžbu" : "Izbriši narudžbu" }}</button>
       </div>
