Added filter by doctor

--- a/AngularApp/src/app/components/edit-medical-institution/edit-medical-institution.component.html
+++ b/AngularApp/src/app/components/edit-medical-institution/edit-medical-institution.component.html
@@ -33,7 +33,7 @@
                     </div>
                     <div class="form-group" *ngIf="res.tipUstanove == 'apoteka'">
                         <span>Cijena dostave (KM):</span>
-                        <input type="number" class="form-control" placeholder="Cijena dostave" name="cijenaDostave" autocomplete="off" spellcheck="false" [(ngModel)]="res.cijenaDostave">
+                        <input type="number" class="form-control" placeholder="Cijena dostave (KM)" name="cijenaDostave" autocomplete="off" spellcheck="false" [(ngModel)]="res.cijenaDostave">
                     </div>
                     <div class="form-group">
                         <span>Opis:</span>
