--- a/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
+++ b/AngularApp/src/app/pages/user/user-cart/user-cart.component.html
@@ -49,7 +49,7 @@
             <p class="mb-2 mx-1">{{ deliveryPrice() }} KM</p>
           </div>
           <div class="card-column">
-            <p class="mb-2 mx-1">Ukupno cijena lijekova i dostave:</p>
+            <p class="mb-2 mx-1">Ukupna cijena lijekova i dostave:</p>
             <p class="mb-2 mx-1">{{ sumPrice() + deliveryPrice() }} KM</p>
           </div>
           <button type="button" class="btn btn-primary btn-lg btn-block mt-2" (click)="showModal = true">Potvrdi narudžbu</button>
